--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <uses-feature
+                    android:name="@string/step_detector" android:required="false"/>
+                <uses-feature
+                    android:name="@string/step_counter" android:required="false"/>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
