--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sujayvittal.compmaps" >
+
     <uses-feature
         android:name="@string/step_detector"
         android:required="false" />
     <uses-feature
         android:name="@string/step_counter"
         android:required="false" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
         <activity
             android:name=".MyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -28,6 +32,10 @@
         <activity
             android:name=".confirmation"
             android:label="@string/title_activity_confirmation" >
+        </activity>
+        <activity
+            android:name=".FileOperations"
+            android:label="@string/title_activity_file_operations" >
         </activity>
     </application>
 
