--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <provider
+            android:name=".MyProvider"
+            android:authorities="com.example.sujayvittal.compmaps.MyProvider" >
+        </provider>
+
         <activity
             android:name=".MyActivity"
             android:label="@string/app_name" >
@@ -37,6 +42,10 @@
         <activity
             android:name=".ListFileActivity"
             android:label="@string/title_activity_list_file" >
+        </activity>
+        <activity
+            android:name=".MyProvider"
+            android:label="@string/title_activity_my_provider" >
         </activity>
     </application>
 
