--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <provider
-            android:name=".MyProvider"
-            android:authorities="com.example.sujayvittal.compmaps.MyProvider" >
-        </provider>
+
 
         <activity
             android:name=".MyActivity"
@@ -44,9 +41,18 @@
             android:label="@string/title_activity_list_file" >
         </activity>
         <activity
-            android:name=".MyProvider"
-            android:label="@string/title_activity_my_provider" >
+            android:name=".MainActivity_ContentProvider"
+            android:label="@string/title_activity_main_activity" >
         </activity>
+        <activity
+            android:name=".MainActivity_TableLayout"
+            android:label="@string/title_activity_my_table_provider" >
+        </activity>
+
+        <provider
+            android:name=".MyProvider"
+            android:authorities="com.example.sujayvittal.compmaps.MyProvider" >
+        </provider>
     </application>
 
 </manifest>
